[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PowerUps/Pulse.gd" type="Script" id=1]
[ext_resource path="res://Art/Tower/TowerSectionDisk.png" type="Texture" id=2]
[ext_resource path="res://Art/PowerUps/Pulse/PulseWave.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

resource_local_to_scene = true
custom_solver_bias = 0.0
radius = 145.565
_sections_unfolded = [ "Resource" ]

[node name="Pulse" type="Position2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="VisualFeedback" type="Sprite" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0.524863 )
self_modulate = Color( 1, 1, 1, 0.276235 )
z_index = 30
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="PulseWave" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="PulseModulate" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="PulseScale" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TriggerTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="SfxPlayer" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( -9.21127, 6.62752 )
volume = -5


